<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>jackal_bbl</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mani123@todo.todo">mani123</maintainer>
  <license>TODO: License declaration</license>

  <!-- Core ROS dependencies -->
  <depend>rclpy</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>tf2_ros</depend>
  <depend>std_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>geometry_msgs</depend>
  <!-- Message generation -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Python dependencies -->
  <depend>python3-numpy</depend>
  <depend>python3-matplotlib</depend>
  <depend>example_interfaces</depend>

  <!-- Visualization and robot description -->
  <depend>rviz2</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  
  <!-- Jackal specific -->
  <depend>jackal_description</depend>
  <exec_depend>jackal_viz</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
